# SaiyanQuest

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  Makefile.clang  Makefile.complete  README.md  build_dbz_game.py  build_working_gba_rom.py  build_working_rom.py  create_debug_rom.py  create_rom.py  create_stable_display.py  create_valid_gba_rom.py  create_visual_rom.py  electron.js  gba.ld  gbafix  main.js  minimal_display.c  pack_rust_gba.py  package-lock.json  package.json  preload.js  replit.md  rust.toolchain.toml  saiyan_quest.gba  simple_working_rom.py  tsconfig.json  ultra_simple_test.py  updater.js  valid_red_test.gba  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.electron.js  webpack.prod.js
.cargo/: config.toml
.claude/: settings.local.json
.config/pulse/: cookie
assets/maps/: overworld.json
attached_assets/: Pasted--Instructions-for-ML-Agent-Recreating-Dragon-Ball-Z-The-Legacy-of-Goku-GBA-in-Highest-Fidelit-1755556168584_1755556168586.txt
client/src/: App.tsx
include/: combat.h  init.h  player.h  quest.h  rpg_system.h
public/: index.html
saiyan_quest/: package-lock.json  vite.config.ts
saiyan_quest/server/: index.ts
scripts/: convert_tmx_to_json.js  dev.js  tiled_transitions.js
server/: index.ts  routes.ts
shared/: schema.ts
source/: init.c  main.c
source/game/: combat.c  player.c  quest_manager.c  rpg_system.c
src/: index.html  index.ts  main.rs  splash.html
src/assets/: audio.rs  backgrounds.rs  mod.rs  sprites.rs
src/config/: GameConfig.ts
src/core/: AssetLoader.ts  Combat.ts  (+6 more)
tools/: sprite_converter.py
(+50 files in other folders)
