[package]
name = "saiyan_quest"
version = "0.1.0"
edition = "2021"
description = "Dragon Ball Z: Legacy of Goku - GBA Game in Rust"
authors = ["Claude Code <noreply@anthropic.com>"]

[dependencies]
agb = "0.21.0"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"

[[bin]]
name = "saiyan_quest"
path = "src/main.rs"